Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.43 [20160511] [svn: r703]
  - sg_senddiag: add --timeout=SEC option
  - sg_sanitize: add --timeout=SEC option
  - sg_format: add --timeout=SEC option
  - sg_decode sense: add --cdb option
  - sg_ses: handle 2 bit EIIOE field in aes dpage
    - expand join handling of SAS connectors and others
    - expand join debug code
  - sg_luns: resync with drafts (sam6r02+spc5r10)
    - remove undocumented test "W" format
    - accept and output on request "quad dashed" format
  - sg_logs: fix volume statistics lpage when subpage
    is zero (ssc5r02a); decode mount history log parameter
    - decode Requested recovery, TapeAlert response, and
      Service buffer information lpages for tape
    - add '--pdt=DT' option
  - sg_inq: fix potential unbounded loop in --export
    - update version descriptor list to 20160510
  - sg_inq+sg_vpd: update Extended inquiry data vpd
    page (spc5r09)
    - add --force option to bypass checking supported
      vpd pages page and fetch requested page directly
  - sg_vpd: 3 party copy VPD page improvements
  - sg_reassign+sg_write_same: fix ULONG_MAX problem
  - sg_rdac: add sanity checks for -f=lun value
  - sg_turs+sg_requests: make both accept '--num=NUM'
    and '--number=NUM' for mutual compatibility
  - sg_zone: fix debug cdb naming
  - sg_opcode: add '--enumerate' and '--pdt=' options
  - sg_raw: add '--enumerate' option
  - sg_lib: add SSC maintenance in/out sa names
    - add read buffer(16) command mode names
    - add sg_decode_transportid_str()
    - implement 'format' argument in dStrHexStr()
  - sg_lib_data: sync asc/ascq codes with T10 20160425
  - rescan-scsi-bus.sh: harden code
    - fixes from Suse; bump version to: 20160511
  - 55-scsi-sg3_id.rules: fixes from Suse